style.css
html,
body{
    margin: 0;
    height: 100%;
    font-family: 'Roboto', sans-serif;
}
nav{
    height: 50px;
}
:root {
    --transparent: #0000;
    --header_color: #ff9a47;
    --header_gradient:linear-gradient(120deg, #f6d365 0%, #fda085 100%);
    --body_gradient: linear-gradient(to left,var(--transparent) 0%, var(--question_color)10%,var(--question_color)90%,var(--transparent) 100%);
    --question_color: #FAF1E4;
    --question_gradient:linear-gradient(to bottom,var(--question_color), var(--transparent) 30px,var(--transparent));
    --candidate_gradient:linear-gradient(180deg, #fdfbfb 0%, #ebedee 100%);
    --result_color: #FFF5F0;
    --main_color: #FFF5F0;
}

.header {
    background: var(--header_gradient);
    height: 60px;
}

#section {
    width: 100%;
    height: 93%;
    overflow: hidden;
    position: absolute;
}


/* style for intro page */
#intro {
    width: 1200px;
    height: 100%;
    margin: auto;
}

#intro_guide {
    margin-top: 5%;
}

#intro_guide_main {
    font-size: 40px;
    font-family: 'Raleway', sans-serif;
    font-weight: 800;
}

#intro_guide_detail {
    font-size: 25px;
}

#intro_examples {
    margin-top: 10%;
}

#intro_examples_image {
    width: 100%;
}

#intro_examples_image_text {
    text-align: left;
    font-size: 20px;
    margin-left: 2%;
}

.intro_examples_image_ul {
    list-style-type: none;
    overflow: hidden;
    /* background-color: var(--main_color); */
    margin-top: 2%;
    margin-left: auto;
    margin-right: auto;
    padding: 0;
    width: 100%;
}

.intro_examples_image_li {
    /* display: inline-block; */
    float: left;
    position: relative;
    width: 16%;
    margin-left: 2%;
    margin-right: 2%;
}

.intro_examples_image_src {
    width: 100%;
    height: 100%;
    margin-bottom: 10px;
}

#intro_start {
    margin-top: 10%;
}

.btn-custom {
    /* bootstrap btn */
    display: inline-block;
    font-weight: 500;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: .25rem;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
    /* bootstrap btn-outline-* */
    /* color: var(--header_color); */
    width:250px;
    background-color: transparent;
    background-image: none;
    /* custom */
    border: 2px solid var(--header_color);
    border-radius: 40px;
    font-size: 25px;
    color: black;
}
.btn-custom:hover {
    background-color: var(--header_color);
    color: white;
}
.btn-custom:focus{
    outline: none;
}

/* style for fail page */
#fail {
    width: 1200px;
    height: 100%;
    margin: auto;
    background-color: var(--transparent);
    background-image: url("./images/no_idea.png");
    background-size: contain;
    background-repeat: no-repeat;
}

#fail_image_item {
    width: 550px;
    height: 400px;
    padding: 50px;
    padding-bottom: 50px;
    margin: auto;
}

.fail_image {
    width: 400px;
    height: 400px;
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0%);
}

#fail_text {
    margin: auto;
    margin-left: 50%;
    text-align: left;
}

#fail_text_main {
    font-size: 30px;
}

#fail_text_detail {
    font-size: 20px;
}

#fail_button button{
    margin-top: 60px;
    margin-left: 12.5%;
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0%);
}


/* style for result page */
#result {
    margin: auto;
    width: 1200px;
    height: 100%;
    background: var(--candidate_gradient);
    margin-top:100%;
    margin-left:-600px;
    position: absolute;
    top:0px;
    left:50%;
    z-index: 1;
}
#product_img{
    margin:10px;
    width: 400px;
}
.answer_button{
    margin: 8px;
    width: 300px;
    height: 55px;
    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
    font-size: 20px;
    font-weight: 500;
    background-color: #FFFFFF;
    border-radius: 25px;
    border: solid 2px;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}
.answer_button:focus{
    outline: none;
}
#result_yes {
    border-color:var(--header_color);
}
#result_yes:hover {
    background-color: var(--header_color);
    color: white;
}
#result_no:hover {
    background-color: lightgrey;
}
#result_back:hover {
    background-color: lightgrey;
}

#result_bottom {
    margin: auto;
    width: 90%;
    height: 30%;
    text-align: left;
}
.alternative {
    width: 24%;
}

.wrapper{
    display: table;
    text-align:center;
    margin: 0 auto;
}
.content{
    display: table-cell;
    vertical-align: middle;
}
.w50{
    width:50%;
}
.w100{
    width: 100%;
}
.h60{
    height: 60%;
}
.bold30{
    font-size: 30px;
    font-weight: bold;
}
.normal20{
    font-size: 20px;
}
.left_align{
    text-align:left;
}
.center_align{
    text-align: center;
}

.horizontal {
    float:left;
}


/* style for question page */
#question{
    width: 1200px;
    margin: 0 auto;
    height: 100%;
}

.question_bg{
    background: var(--question_color);
    width: 1200px;
    height: 100%;
    
}

.btn-choice {
    /* bootstrap btn */
    display: inline-block;
    font-weight: 500;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: .25rem;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
    /* bootstrap btn-outline-* */
    /* color: var(--header_color); */
    width:250px;
    background-color: transparent;
    background-image: none;
    /* custom */
    border: 2px solid grey;
    border-radius: 40px;
    font-size: 25px;
    color: black;
    background-color: #FFFFFF;
}
.btn-choice:hover{
    border-color: var(--header_color);
}
.btn-choice:focus{
    outline: none;
    border-color: var(--header_color);
    box-shadow:inset 4px 2px 0px -1px var(--header_color);
}

.candidate_bg{
	background-color: var(--result_color);
	width: 1200px;
	height: 50%;
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, 0%);
}

.back_button{
    background-size: 100px 100px;
    width: 28px;
    height: 28px;
    margin-left: 15px;
    margin-top: 12px;
}
.back_button:focus{
    outline: none;
}


.question{
    width: 1200px;
    margin: 0 auto;
    text-align: center;
    font-size: 40px;
    font-weight: bold;
    margin-top: 30px;
    margin-bottom: 30px;
}

.choices{
    width: 840px;
    height: 210px;
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-content: center;
}

.choices button{
    width: 240px;
    font-size: 24px;
    margin: 10px;
}

.imgdiv{	
	position: absolute;
	width:200px;
	height:200px;
	display:none;
	left: 50%;
	top: 60%;
	transform: translate(-50%, -50%);
}

.wrongimgdiv{	
	position: absolute;
	width:200px;
	height:200px;
	opacity:0.5;
	display:none;
	left: 50%;
	top: 60%;
	transform: translate(-50%, -50%);
}

.candidates{
	width:100%;
	height:100%;
}
.candidates:hover{
    width:104%;
    height:104%;
    margin-left:-2%;
    margin-top:-2%;
    /*transform: rotate(3deg);*/
}
.candidates:focus{
    outline:none;
    width:100%;
    height:100%;
    margin-left:0%;
    margin-top:0%;
}

